Heroku requirements added

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "electronics-gadgets",
+  "homepage": "https://santhoshi-k-s.github.io/electronics-gadgets/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
