--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,25 @@
     "version": 2,
     "builds": [
       {
-        "src": "server/server.js",
+        "src": "package.json",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "client/build"
+        }
+      },
+      {
+        "src": "api/index.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
+        "src": "/api/(.*)",
+        "dest": "api/index.js"
+      },
+      {
         "src": "/(.*)",
-        "dest": "server/server.js"
+        "dest": "client/build/$1"
       }
     ]
   }
