--- a/vercel.json
+++ b/vercel.json
@@ -5,23 +5,28 @@
         "src": "package.json",
         "use": "@vercel/static-build",
         "config": {
-          "distDir": "client/build"
+          "distDir": "build"
         }
       },
       {
-        "src": "api/index.js",
+        "src": "server/server.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
-        "src": "/api/(.*)",
-        "dest": "api/index.js"
+        "src": "/server/(.*)",
+        "dest": "server/server.js"
       },
       {
         "src": "/(.*)",
-        "dest": "client/build/$1"
+        "dest": "build/$1"
       }
-    ]
+    ],
+    "build": {
+      "env": {
+        "NODE_ENV": "production"
+      }
+    }
   }
   
