--- a/package.json
+++ b/package.json
@@ -26,9 +26,8 @@
   },
   "scripts": {
     "install": "npm install --legacy-peer-deps",
-    "build": "npm run install && npm run build:frontend && npm run build:backend",
+    "build": "npm run install && npm run build:frontend",
     "build:frontend": "npm install --legacy-peer-deps && npm run build",
-    "build:backend": "cd server && npm install --legacy-peer-deps && npm run build",
     "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
